# 06_NeRF

./: .gitignore  README.md  config.py  dataset.py  inference.py  nerf_to_ply.py  net.py  pyproject.toml  show_3dgs.py  show_ply.py  train.py  train_gsplat.py  train_nerf.py  utils.py
conf/: config.yaml  tiny_config.yaml  tless_config.yaml
conf_gsplat/: tiny_config.yaml  tless_config.yaml
